--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "https://json.schemastore.org/package.json",
   "name": "my-react-app",
   "private": true,
   "version": "0.0.0",
@@ -10,10 +11,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@fontsource/roboto": "^5.2.9",
+    "@mui/icons-material": "^7.3.7",
+    "@mui/material": "^7.3.7",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-loader-spinner": "^8.0.2",
     "react-router": "^7.12.0",
     "react-router-dom": "^7.12.0",
+    "react-spinners": "^0.17.0",
     "styled-components": "^6.3.8"
   },
   "devDependencies": {
